--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recent GitHub Events</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="container">
-        <h1>Recent GitHub Actions</h1>
-        <ul id="events-list" class="events-list">
-            <!-- List of events will be populated here by JavaScript -->
-        </ul>
+        <header>
+            <h1>Recent GitHub Actions</h1>
+        </header>
+        <main>
+            <section class="events">
+                <ul id="events-list" class="events-list">
+                    <!-- List of events will be populated here by JavaScript -->
+                </ul>
+            </section>
+        </main>
+        <footer>
+            <p>Powered by <a href="https://github.com/" target="_blank">GitHub</a></p>
+        </footer>
     </div>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
