--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recent GitHub Events</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <div class="container">
@@ -13,11 +12,11 @@
             <h1>Recent GitHub Actions</h1>
         </header>
         <main>
-            <section class="events">
+            <div class="events">
                 <ul id="events-list" class="events-list">
-                    <!-- List of events will be populated here by JavaScript -->
+                    <!-- Dynamic event cards will be populated here by JavaScript -->
                 </ul>
-            </section>
+            </div>
         </main>
 
     </div>
