--- a/templates/index.html
+++ b/templates/index.html
@@ -12,11 +12,19 @@
             <h1>Recent GitHub Actions</h1>
         </header>
         <main>
-            <div class="events">
-                <ul id="events-list" class="events-list">
-                    <!-- Dynamic event cards will be populated here by JavaScript -->
-                </ul>
-            </div>
+            <table class="events-table">
+                <thead>
+                    <tr>
+                        <th>Username</th>
+                        <th>Action</th>
+                        <th>Explanation</th>
+                        <th>Time</th>
+                    </tr>
+                </thead>
+                <tbody id="events-list">
+                    <!-- List of events will be populated here by JavaScript -->
+                </tbody>
+            </table>
         </main>
 
     </div>
